[workspace]
resolver = "2"
members = ["astro_mod_integrator", "astro_modloader"]

[workspace.package]
version = "0.2.0"
authors = ["AstroTechies, localcc, konsti219"]
description = "Astroneer Modloader"

[workspace.dependencies]
astro_mod_integrator = { path = "./astro_mod_integrator" }

# REMEMBER TO SWAP OVER WHEN PUSHING TO GIT!
# unreal_mod_manager = { rev = "c636ad4e30c0f048f931d03a803d233c06dbf5d8", git = "https://github.com/AstroTechies/unrealmodding", features = [
#     "ue4_23",
#     "cpp_loader",
# ] }

# For local dev:
unreal_mod_manager = { path = "../unrealmodding/unreal_mod_manager", features = ["ue4_27", "cpp_loader"] }

lazy_static = "1.5.0"
log = "0.4.28"
regex = "1.12.2"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
steamy-vdf = { git = "https://github.com/icewind1991/steamy" }
