[package]
name = "astro_modloader"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2021"

[dependencies]
astro_mod_integrator.workspace = true

unreal_mod_manager.workspace = true

autoupdater = "0.3.0"
colored = "3.0.0"
image = "0.25.9"
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
